--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -162,6 +162,7 @@ list( APPEND ufo_test_input
   testinput/processwhere.yaml
   testinput/parameters.yaml
   testinput/parameters_older_eckit.yaml
+  testinput/qc_practical_boundscheck.yaml
   testinput/primitive_variables.yaml
   testinput/metoffice_radiance_error_matrices.yaml
   testinput/qc_actions.yaml
@@ -186,6 +187,7 @@ list( APPEND ufo_test_input
   testinput/qc_poisson_disk_thinning.yaml
   testinput/qc_poisson_disk_thinning_unittests.yaml
   testinput/qc_poisson_disk_thinning_parallel.yaml
+  testinput/qc_practical_boundscheck.yaml
   testinput/qc_preqc.yaml
   testinput/qc_preqc_halo.yaml
   testinput/qc_profile_background_check.yaml
@@ -1525,6 +1527,13 @@ ecbuild_add_test( TARGET  test_ufo_opr_profile_average
 
 # Test UFO ObsFilters (generic)
 
+ecbuild_add_test( TARGET  test_ufo_qc_gen_practical_boundscheck
+                  COMMAND ${CMAKE_BINARY_DIR}/bin/test_ObsFilters.x
+                  ARGS    "testinput/qc_practical_boundscheck.yaml"
+                  ENVIRONMENT OOPS_TRAPFPE=1
+                  DEPENDS test_ObsFilters.x
+                  TEST_DEPENDS ufo_get_ufo_test_data )
+                  
 ecbuild_add_test( TARGET  test_ufo_qc_gen_processwhere
                   SOURCES mains/TestProcessWhere.cc
                   ARGS    "testinput/processwhere.yaml"
